Bug manganelo,auto suggestion, empty image